# Project-Insight

./: README.md  pyproject.toml  requirements.txt
config/: pipeline_config.yaml
data/: README_data_sources.md
data/synthetic/: generate_telemetry.py
notebooks/: 01_data_ingest_benchmark.ipynb  02_inference_pipeline.ipynb  03_query_telemetry.ipynb  04_compare_local_vs_nim.ipynb
scripts/: merge_banner_images.py
src/: __init__.py  config.py
src/deploy/: nim_client.py
src/deploy/gke/: cluster_setup.sh  deploy_nim.sh  nim_values.yaml
src/inference/: format_selector.py  metrics.py  model_loader.py  pipeline.py
src/ingest/: benchmark_loader.py  cudf_loader.py
src/query/: engine.py  prompts.py  query_config.py
